--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -22,10 +22,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:toolbarId="@+id/toolbar"
-                android:background="@drawable/ic_region"
+                android:background="@color/white"
                 app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
                 app:titleEnabled="false">
+
+            <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/app_bar_height"
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/inam_logo"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -33,6 +42,7 @@
                     android:layout_width="match_parent"
                     app:layout_collapseMode="pin"
                     app:title="Home"
+                    app:titleTextColor="@color/black"
                     app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
