--- a/app/src/main/res/layout/fragment_market_info.xml
+++ b/app/src/main/res/layout/fragment_market_info.xml
@@ -10,6 +10,10 @@
 
     <include layout="@layout/row_info_item"/>
 
+    <include layout="@layout/row_award_item"/>
+
+    <include layout="@layout/row_opentime_item"/>
+
     <include layout="@layout/row_contact_item"/>
 
     <include layout="@layout/row_map_item"/>
