--- a/app/src/main/res/layout/fragment_network_main.xml
+++ b/app/src/main/res/layout/fragment_network_main.xml
@@ -22,9 +22,16 @@
                 app:toolbarId="@+id/toolbar"
                 android:background="@drawable/ic_region"
                 app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
                 app:titleEnabled="false">
 
+            <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/app_bar_height"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -65,7 +72,7 @@
                 <androidx.viewpager.widget.ViewPager
                         android:id="@+id/pager_shop"
                         android:layout_width="match_parent"
-                        android:layout_height="600dp"/>
+                        android:layout_height="@dimen/viewpager_main_height"/>
 
             </LinearLayout>
 
