--- a/app/src/main/res/layout/fragment_shop_main.xml
+++ b/app/src/main/res/layout/fragment_shop_main.xml
@@ -6,11 +6,11 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".fragment.ui.shop.ShopMainFragment">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
-            android:fitsSystemWindows="true"
             android:layout_height="@dimen/app_bar_height"
             android:layout_width="match_parent"
             android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
@@ -21,10 +21,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:toolbarId="@+id/toolbar"
-                android:background="@drawable/ic_region"
                 app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
                 app:titleEnabled="false">
+
+            <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/app_bar_height"
+                    android:scaleType="centerCrop"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax"/>
 
 
             <androidx.appcompat.widget.Toolbar
@@ -66,7 +73,7 @@
                 <androidx.viewpager.widget.ViewPager
                         android:id="@+id/pager_shop"
                         android:layout_width="match_parent"
-                        android:layout_height="600dp"/>
+                        android:layout_height="@dimen/viewpager_main_height"/>
 
             </LinearLayout>
 
