--- a/app/src/main/res/layout/fragment_show_main.xml
+++ b/app/src/main/res/layout/fragment_show_main.xml
@@ -7,6 +7,7 @@
         android:id="@+id/cl_home2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".fragment.home.ShowMainFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -18,15 +19,20 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
-                android:fitsSystemWindows="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:toolbarId="@+id/toolbar"
-                android:background="@drawable/ic_region"
                 app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                android:fitsSystemWindows="true"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
                 app:titleEnabled="false">
 
+            <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -67,7 +73,7 @@
                 <androidx.viewpager.widget.ViewPager
                         android:id="@+id/pager_main"
                         android:layout_width="match_parent"
-                        android:layout_height="600dp"/>
+                        android:layout_height="@dimen/viewpager_main_height"/>
 
             </LinearLayout>
 
