--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,10 @@
             android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/title_home"/>
 
-    <item
-            android:id="@+id/navigation_pin"
-            android:icon="@drawable/ic_pin"
-            android:title="@string/title_pin"/>
+    <!--<item-->
+            <!--android:id="@+id/navigation_pin"-->
+            <!--android:icon="@drawable/ic_pin"-->
+            <!--android:title="@string/title_pin"/>-->
 
     <item
             android:id="@+id/navigation_more"
