--- a/app/src/main/res/layout/fragment_network_item.xml
+++ b/app/src/main/res/layout/fragment_network_item.xml
@@ -72,6 +72,8 @@
 
             <include layout="@layout/card_contact_item"/>
 
+            <include layout="@layout/card_opentime_item"/>
+
             <include layout="@layout/card_photo_item"/>
 
 
