--- a/app/src/main/res/layout/row_opentime_item.xml
+++ b/app/src/main/res/layout/row_opentime_item.xml
@@ -33,31 +33,167 @@
                 android:layout_gravity="center"/>
 
         <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_marginLeft="16dp">
 
-            <TextView
-                    android:id="@+id/tv_opentime_date"
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Date"
-                    android:layout_gravity="center"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
-                    android:lineSpacingExtra="4dp"/>
+                    android:weightSum="3"
+                    android:orientation="horizontal">
 
-            <TextView
-                    android:id="@+id/tv_opentime_time"
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/title_monday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_monday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Time"
-                    android:layout_gravity="center"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
-                    android:lineSpacingExtra="4dp"/>
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Tuesday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_tuesday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Wednesday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_wednesday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/title_thursday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_thursday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/title_friday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_friday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/title_saturday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_saturday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/title_sunday"
+                        android:lineSpacingExtra="4dp"/>
+
+                <TextView
+                        android:id="@+id/tv_opentime_sunday"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="-"
+                        android:lineSpacingExtra="4dp"/>
+            </LinearLayout>
+
+
         </LinearLayout>
-
 
 
     </LinearLayout>
