--- a/app/src/main/res/layout/card_address_item.xml
+++ b/app/src/main/res/layout/card_address_item.xml
@@ -31,6 +31,7 @@
                 android:hint="Address">
 
             <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_address_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/TextInputEditTextItem"/>
@@ -44,6 +45,7 @@
                 android:hint="Latitude">
 
             <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_address_latitude"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/TextInputEditTextItem"/>
@@ -57,6 +59,7 @@
                 android:hint="Longitude">
 
             <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_address_longitude"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/TextInputEditTextItem"/>
