--- a/app/src/main/res/layout/fragment_market_item.xml
+++ b/app/src/main/res/layout/fragment_market_item.xml
@@ -41,43 +41,47 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/CardViewItem"
-                    android:elevation="8dp"
-                    card_view:cardCornerRadius="10dp"
-                    card_view:cardUseCompatPadding="true">
+            <!--<androidx.cardview.widget.CardView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--style="@style/CardViewItem"-->
+                    <!--android:elevation="8dp"-->
+                    <!--card_view:cardCornerRadius="10dp"-->
+                    <!--card_view:cardUseCompatPadding="true">-->
 
-                <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        style="@style/LinearLayoutItem">
+                <!--<LinearLayout-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="match_parent"-->
+                        <!--android:orientation="vertical"-->
+                        <!--style="@style/LinearLayoutItem">-->
 
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            style="@style/TextTitleItem"
-                            android:text="@string/title_item_contact"/>
+                    <!--<TextView-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--style="@style/TextTitleItem"-->
+                            <!--android:text="@string/title_item_contact"/>-->
 
-                    <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            style="@style/TextInputLayoutItem"
-                            android:hint="Name">
+                    <!--<com.google.android.material.textfield.TextInputLayout-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--style="@style/TextInputLayoutItem"-->
+                            <!--android:hint="Name">-->
 
-                        <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/et_name"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                style="@style/TextInputEditTextItem"/>
+                        <!--<com.google.android.material.textfield.TextInputEditText-->
+                                <!--android:id="@+id/et_name"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--style="@style/TextInputEditTextItem"/>-->
 
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                    <!--</com.google.android.material.textfield.TextInputLayout>-->
+                <!--</LinearLayout>-->
+            <!--</androidx.cardview.widget.CardView>-->
+
+            <include layout="@layout/card_contact_item"/>
 
             <include layout="@layout/card_address_item"/>
+
+            <include layout="@layout/card_opentime_item"/>
 
             <include layout="@layout/card_photo_item"/>
 
