--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,11 +21,11 @@
         <item>โซน</item>
         <item>ร้านค้า</item>
         <item>สินค้า</item>
-        <item>สต๊อค</item>
+        <!--<item>สต๊อค</item>-->
         <item>*ที่พัก</item>
         <item>ที่พัก</item>
-        <item>ห้องพัก</item>
-        <item>จอง</item>
+        <!--<item>ห้องพัก</item>-->
+        <!--<item>จอง</item>-->
         <item>*ท่องเที่ยว &amp; เครือข่าย &amp; บริการ</item>
         <item>ท่องเที่ยว</item>
         <item>เครือข่าย</item>
