--- a/app/src/main/res/menu/menu_item.xml
+++ b/app/src/main/res/menu/menu_item.xml
@@ -3,6 +3,12 @@
       xmlns:tools="http://schemas.android.com/tools">
 
     <item
+            android:id="@+id/action_preview"
+            android:title="preview"
+            android:icon="@drawable/ic_pageview_white"
+            app:showAsAction="ifRoom" />
+
+    <item
             android:id="@+id/action_save"
             android:title="save"
             app:showAsAction="ifRoom" />
