--- a/app/src/main/res/layout/card_show_grid.xml
+++ b/app/src/main/res/layout/card_show_grid.xml
@@ -7,7 +7,7 @@
         style="@style/CardViewItem"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:elevation="8dp"
+        android:elevation="@dimen/row_show_elevation"
         card_view:cardCornerRadius="10dp"
         card_view:cardUseCompatPadding="true">
 
@@ -35,7 +35,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp">
+                android:layout_margin="@dimen/row_show_view_margin">
 
             <TextView
                     android:id="@+id/tv_name"
