--- a/app/src/main/res/layout/row_rating_item.xml
+++ b/app/src/main/res/layout/row_rating_item.xml
@@ -1,102 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/rating_title"
-            style="@style/TextTitleItem"
-            android:text="Ratings &amp; Reviews"/>
-
     <LinearLayout
-            android:id="@+id/ll1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginBottom="@dimen/text_margin"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:layout_margin="@dimen/row_show_margin"
+            android:orientation="vertical">
+
+        <TextView
+                android:id="@+id/rating_title"
+                style="@style/TextTitleItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ratings &amp; Reviews" />
 
         <LinearLayout
-                android:layout_width="0dp"
+                android:id="@+id/ll1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-            <RatingBar
-                    android:id="@+id/rating_bar"
-                    style="@style/Widget.AppCompat.RatingBar.Small"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:rating="4"
-                    android:stepSize="0.5" />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-            <TextView
-                    android:id="@+id/tv_rating_mean"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="4 out of 5" />
+                <RatingBar
+                        android:id="@+id/rating_bar"
+                        style="@style/Widget.AppCompat.RatingBar.Small"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:numStars="5"
+                        android:rating="4"
+                        android:stepSize="0.5" />
 
-            <TextView
-                    android:id="@+id/tv_rating_sum"
-                    android:layout_width="match_parent"
+                <TextView
+                        android:id="@+id/tv_rating_mean"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/row_show_view_margin"
+                        android:text="4 out of 5" />
+
+                <TextView
+                        android:id="@+id/tv_rating_sum"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/row_show_view_margin"
+                        android:text="497 ratings 428 reviews" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="497 ratings 428 reviews" />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                <TextView
+                        android:id="@+id/tv_5star"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="5 stars : 302" />
+
+                <TextView
+                        android:id="@+id/tv_4star"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/row_show_view_margin"
+                        android:text="4 stars : 74" />
+
+                <TextView
+                        android:id="@+id/tv_3star"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/row_show_view_margin"
+                        android:text="3 stars : 29" />
+
+                <TextView
+                        android:id="@+id/tv_2star"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/row_show_view_margin"
+                        android:text="2 stars : 19" />
+
+                <TextView
+                        android:id="@+id/tv_1star"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/row_show_view_margin"
+                        android:text="1 stars : 73" />
+            </LinearLayout>
 
         </LinearLayout>
-
-        <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/tv_5star"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="5 stars : 302" />
-
-            <TextView
-                    android:id="@+id/tv_4star"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="4 stars : 74" />
-
-            <TextView
-                    android:id="@+id/tv_3star"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="3 stars : 29" />
-
-            <TextView
-                    android:id="@+id/tv_2star"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="2 stars : 19" />
-
-            <TextView
-                    android:id="@+id/tv_1star"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="1 stars : 73" />
-        </LinearLayout>
-
     </LinearLayout>
 
     <Button
@@ -105,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:text="Review"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_comment"
