--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
             android:id="@+id/navigation_dashboard"
-            android:name="com.sungkunn.inam.new_design.ui.dashboard.DashboardFragment"
+            android:name="com.sungkunn.inam.new_design.ui.home.HomeProductFragment"
             android:label="@string/title_dashboard"
-            tools:layout="@layout/fragment_dashboard" />
+            tools:layout="@layout/fragment_home_product" />
 
     <fragment
             android:id="@+id/navigation_notifications"
-            android:name="com.sungkunn.inam.new_design.ui.notifications.NotificationsFragment"
+            android:name="com.sungkunn.inam.new_design.ui.home.HomeMoreFragment"
             android:label="@string/title_notifications"
-            tools:layout="@layout/fragment_notifications" />
+            tools:layout="@layout/fragment_home_more" />
 </navigation>
