--- a/app/src/main/res/layout/card_opentime_item.xml
+++ b/app/src/main/res/layout/card_opentime_item.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/CardViewItem"
-        android:elevation="8dp"
+        android:elevation="@dimen/row_show_elevation"
         card_view:cardCornerRadius="10dp"
         card_view:cardUseCompatPadding="true">
 
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:layout_margin="@dimen/row_show_margin"
             style="@style/LinearLayoutItem">
 
         <TextView
