--- a/app/src/main/res/layout/card_show_comment.xml
+++ b/app/src/main/res/layout/card_show_comment.xml
@@ -11,10 +11,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp">
+            android:paddingBottom="@dimen/row_show_view_margin"
+            android:paddingLeft="@dimen/row_show_margin"
+            android:paddingRight="@dimen/row_show_margin"
+            android:paddingTop="@dimen/row_show_view_margin">
 
 
         <ImageView
@@ -26,8 +26,8 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:padding="8dp"
+                android:layout_marginLeft="@dimen/row_show_view_margin"
+                android:padding="@dimen/row_show_view_margin"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/shape_comment"
                 android:orientation="vertical">
@@ -45,6 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:rating="5"
+                    android:layout_marginTop="@dimen/row_show_margin"
                     style="@style/Widget.AppCompat.RatingBar.Small"/>
 
             <TextView
@@ -52,6 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
+                    android:layout_marginTop="@dimen/row_show_margin"
                     android:textSize="16sp" />
 
         </LinearLayout>
