--- a/app/src/main/res/layout/card_show_place.xml
+++ b/app/src/main/res/layout/card_show_place.xml
@@ -5,9 +5,9 @@
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/row_show_view_margin"
         android:background="@android:color/white"
-        android:elevation="8dp"
+        android:elevation="@dimen/row_show_elevation"
         android:orientation="vertical">
 
     <ImageView
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/margin_small">
+            android:padding="@dimen/row_show_view_margin">
 
         <TextView
                 android:id="@+id/tv_name"
@@ -39,7 +39,7 @@
                 android:id="@+id/tv_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_small"
+                android:layout_marginTop="@dimen/row_show_view_margin"
                 android:maxLines="2"
                 android:text="Detail"
                 android:textSize="@dimen/text_detail" />
@@ -49,6 +49,7 @@
                 style="@style/ChipType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/row_show_view_margin"
                 android:text="Travel" />
 
     </LinearLayout>
