--- a/app/src/main/res/layout/card_show_stocklog.xml
+++ b/app/src/main/res/layout/card_show_stocklog.xml
@@ -4,9 +4,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/row_show_view_margin"
         android:background="@android:color/white"
-        android:elevation="8dp"
+        android:elevation="@dimen/row_show_elevation"
         android:orientation="vertical">
 
     <LinearLayout
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/margin_small">
+            android:padding="@dimen/row_show_view_margin">
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/row_show_view_margin"
                 android:orientation="horizontal">
 
             <ImageView
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/row_show_view_margin"
                 android:orientation="horizontal">
 
             <ImageView
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/row_show_view_margin"
                 android:orientation="horizontal">
 
             <ImageView
