--- a/app/src/main/res/layout/dialog_edit_stock.xml
+++ b/app/src/main/res/layout/dialog_edit_stock.xml
@@ -12,18 +12,14 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/row_show_margin"
             android:orientation="vertical">
-
 
         <RadioGroup
                 android:id="@+id/radio_group"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
                 android:orientation="horizontal"
-                android:padding="4dp"
                 android:weightSum="2">
 
 
