--- a/app/src/main/res/layout/fragment_home_product.xml
+++ b/app/src/main/res/layout/fragment_home_product.xml
@@ -50,8 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_marginBottom="?attr/actionBarSize">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
