--- a/app/src/main/res/layout/new_manage_fragment.xml
+++ b/app/src/main/res/layout/new_manage_fragment.xml
@@ -44,8 +44,8 @@
                 <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
-                        android:elevation="8dp"
+                        android:layout_margin="@dimen/row_show_view_margin"
+                        android:elevation="@dimen/row_show_elevation"
                         app:cardBackgroundColor="@color/bg"
                         card_view:cardCornerRadius="10dp"
                         card_view:cardUseCompatPadding="true">
@@ -53,7 +53,7 @@
                     <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_margin="16dp"
+                            android:layout_margin="@dimen/row_show_view_margin"
                             android:orientation="vertical">
 
 
@@ -67,7 +67,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="right"
-                                android:layout_marginTop="8dp"
+                                android:layout_marginTop="@dimen/row_show_view_margin"
                                 android:text="Search"
                                 android:textColor="@color/black" />
                     </LinearLayout>
