--- a/app/src/main/res/layout/row_award_item.xml
+++ b/app/src/main/res/layout/row_award_item.xml
@@ -7,6 +7,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="@dimen/row_show_margin">
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,17 +26,13 @@
             android:orientation="horizontal"
             android:layout_centerVertical="true"
             android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginBottom="@dimen/text_margin"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="@dimen/row_show_view_margin">
 
         <ImageView
                 android:id="@+id/iv_award"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/icon_award"
-
                 android:layout_gravity="center"/>
 
         <TextView
@@ -44,6 +46,6 @@
                 android:lineSpacingExtra="4dp"/>
 
     </LinearLayout>
-
+    </LinearLayout>
 
 </LinearLayout>
