--- a/app/src/main/res/layout/row_buy_cart_item.xml
+++ b/app/src/main/res/layout/row_buy_cart_item.xml
@@ -21,8 +21,7 @@
                 android:layout_weight="1"
                 android:text="Total"
                 android:textStyle="bold"
-                android:textColor="@android:color/holo_red_light"
-                android:padding="8dp"/>
+                android:textColor="@android:color/holo_red_light"/>
 
         <Button
                 android:id="@+id/btn_cart_pay"
