--- a/app/src/main/res/layout/row_contact_item.xml
+++ b/app/src/main/res/layout/row_contact_item.xml
@@ -1,188 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/TextTitleItem"
-            android:text="Contact"/>
-
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="8dp">
-
-        <ImageView
-                android:id="@+id/iv_contact_owner"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_person_black"
-                android:layout_gravity="center"/>
+            android:layout_margin="@dimen/row_show_margin"
+            android:orientation="vertical">
 
         <TextView
-                android:id="@+id/tv_contact_owner"
+                style="@style/TextTitleItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"
-                android:lineSpacingExtra="4dp"/>
+                android:text="Contact" />
 
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="8dp">
-
-        <ImageView
-                android:id="@+id/iv_contact_link"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_link"
-                android:layout_gravity="center"/>
-
-        <TextView
-                android:id="@+id/tv_contact_link"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"
-                android:lineSpacingExtra="4dp"/>
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+            <ImageView
+                    android:id="@+id/iv_contact_owner"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_person_black" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="8dp">
+            <TextView
+                    android:id="@+id/tv_contact_owner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical"
+                    android:lineSpacingExtra="4dp"
+                    android:text="" />
 
-        <ImageView
-                android:id="@+id/iv_contact_phone"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_phone"
-                android:layout_gravity="center"/>
+        </LinearLayout>
 
-        <TextView
-                android:id="@+id/tv_contact_phone"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"/>
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+            <ImageView
+                    android:id="@+id/iv_contact_link"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_link" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="8dp">
+            <TextView
+                    android:id="@+id/tv_contact_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical"
+                    android:lineSpacingExtra="4dp"
+                    android:text="" />
 
-        <ImageView
-                android:id="@+id/iv_contact_line"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_line"
-                android:layout_gravity="center"/>
+        </LinearLayout>
 
-        <TextView
-                android:id="@+id/tv_contact_line"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"/>
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+            <ImageView
+                    android:id="@+id/iv_contact_phone"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_phone" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginTop="8dp">
+            <TextView
+                    android:id="@+id/tv_contact_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical"
+                    android:text="" />
 
-        <ImageView
-                android:id="@+id/iv_contact_fb"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_fb"
-                android:layout_gravity="center"/>
+        </LinearLayout>
 
-        <TextView
-                android:id="@+id/tv_contact_fb"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"/>
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal">
 
-    </LinearLayout>
+            <ImageView
+                    android:id="@+id/iv_contact_line"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_line" />
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginBottom="@dimen/text_margin"
-            android:layout_marginTop="8dp">
+            <TextView
+                    android:id="@+id/tv_contact_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical"
+                    android:text="" />
 
-        <ImageView
-                android:id="@+id/iv_contact_email"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:src="@drawable/ic_email"
-                android:layout_gravity="center"/>
+        </LinearLayout>
 
-        <TextView
-                android:id="@+id/tv_contact_email"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:layout_marginLeft="16dp"/>
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal">
 
+            <ImageView
+                    android:id="@+id/iv_contact_fb"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_fb" />
+
+            <TextView
+                    android:id="@+id/tv_contact_fb"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical"
+                    android:text="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:orientation="horizontal">
+
+            <ImageView
+                    android:id="@+id/iv_contact_email"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_email" />
+
+            <TextView
+                    android:id="@+id/tv_contact_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"
+                    android:gravity="center_vertical"
+                    android:text="" />
+
+        </LinearLayout>
     </LinearLayout>
-
 
 </LinearLayout>
