--- a/app/src/main/res/layout/row_info_item.xml
+++ b/app/src/main/res/layout/row_info_item.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/info_title"
-            style="@style/TextTitleItem"
-            android:text="Information"/>
+            android:layout_margin="@dimen/row_show_margin"
+            android:orientation="vertical">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="information"
-            android:id="@+id/info_detail"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginBottom="@dimen/text_margin" />
+        <TextView
+                android:id="@+id/info_title"
+                style="@style/TextTitleItem"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Information" />
 
+        <TextView
+                android:id="@+id/info_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/row_show_view_margin"
+                android:text="information" />
+    </LinearLayout>
 
 </LinearLayout>
