--- a/app/src/main/res/layout/row_name_item.xml
+++ b/app/src/main/res/layout/row_name_item.xml
@@ -12,15 +12,15 @@
             android:id="@+id/tv_name_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:text="information"
+            android:layout_margin="@dimen/row_show_margin"
+            android:text="name"
             android:textColor="@android:color/black" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:paddingLeft="16dp"
+            android:paddingRight="@dimen/row_show_margin"
+            android:paddingLeft="@dimen/row_show_margin"
             android:background="@color/bg">
 
         <TextView
