--- a/app/src/main/res/layout/row_opentime_item.xml
+++ b/app/src/main/res/layout/row_opentime_item.xml
@@ -7,6 +7,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="@dimen/row_show_margin">
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,10 +26,7 @@
             android:orientation="horizontal"
             android:layout_centerVertical="true"
             android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/text_margin"
-            android:layout_marginLeft="@dimen/text_margin"
-            android:layout_marginBottom="@dimen/text_margin"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="@dimen/row_show_view_margin">
 
         <ImageView
                 android:id="@+id/iv_opentime"
@@ -197,6 +200,6 @@
 
 
     </LinearLayout>
-
+    </LinearLayout>
 
 </LinearLayout>
