--- a/app/src/main/res/layout/row_price_item.xml
+++ b/app/src/main/res/layout/row_price_item.xml
@@ -9,16 +9,13 @@
 
     <View
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="@dimen/row_show_border"
             android:background="@color/bg"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:layout_margin="@dimen/row_show_margin">
 
         <TextView
                 android:id="@+id/tv_price_price"
@@ -36,7 +33,7 @@
                 android:id="@+id/iv_price_1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginRight="@dimen/row_show_view_margin"
                 android:src="@drawable/ic_pin"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iv_price_2"
@@ -55,7 +52,7 @@
 
     <View
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="@dimen/row_show_border"
             android:background="@color/bg"/>
 
 </LinearLayout>
