--- a/app/src/main/res/layout/row_rv_place_item.xml
+++ b/app/src/main/res/layout/row_rv_place_item.xml
@@ -5,6 +5,7 @@
         xmlns:map="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/row_show_margin"
         android:orientation="vertical">
 
     <TextView
@@ -17,7 +18,8 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_place"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/row_show_view_margin"/>
 
 
 </LinearLayout>
